--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -19,3 +19,10 @@ This approach provides a quantitative ranking of hypotheses, a ranking that is m
 Consider the following toy example.
 -->
 &emsp;&emsp;看一个简单的例子
+
+<!--
+2.1.1. Counting possibilities. Suppose there’s a bag, and it contains four marbles. These marbles come in two colors: blue and white. We know there are four marbles in the bag, but we don’t know how many are of each color. We do know that there are five possibilities: (1)[ ],(2)[ ],(3)[ ],(4)[ ],(5)[ ]. Thesearetheonly possibilities consistent with what we know about the contents of the bag. Call these five possibilities the conjectures.
+-->
+&emsp;&emsp; **2.1.1 概率计数**。假设有一个袋子，里面有四个小球。小球有两种颜色：蓝色和白色。我们只知道袋子里有四个小球但是不知道蓝色和白色分别有多少个。那么就有5种可能：（1），（2）[<font color="#0099ff">●</font>○○○]，（3）![image](images/ball_w2_b2.png)，（4）[●●●○]，（5）[●●●●]。对于已知，袋子里的小球的颜色有一个概率。这5个概率我们叫它推测。
+
+
