--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -30,5 +30,12 @@ Consider the following toy example.
 （4）\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]，
 （5）\[:large_blue_circle::large_blue_circle::large_blue_circle::large_blue_circle:\]。袋子里的小球的颜色只有这5种可能。这5个可能性我们叫它推测。
 
-
+<!--
+Our goal is to figure out which of these conjectures is most plausible, given some evi- dence about the contents of the bag. We do have some evidence: A sequence of three mar- bles is pulled from the bag, one at a time, replacing the marble each time and shaking the bag before drawing another marble. The sequence that emerges is: , in that order. These are the data.
+-->
+&emsp;&emsp; 我们的目标是在已知一些证据的情况下找出哪种组合的可能性最大。我们有一些已知证据：从袋子里随机取三次小球形成的一个数据序列，每次取之前都把已经取出的小球放回去并摇一摇袋子。结果是\(:large_blue_circle::white_circle::large_blue_circle:\)。这就是我们已知的数据。
+<!--
+So now let’s plant the garden and see how to use the data to infer what’s in the bag. Let’s begin by considering just the single conjecture, [ ], that the bag contains one blue and three white marbles. On the first draw from the bag, one of four things could happen, corre- sponding to one of four marbles in the bag. So we can visualize the possibilities branching outward:
+-->
+&emsp;&emsp; 我们来画一画这个“花园”，看一下怎么用这些数据来推断袋子里小球的颜色。我们随意选一种推测比如\[:large_blue_circle::white_circle::white_circle::white_circle:\]，袋子里有一个蓝球和三个白球。第一次从袋子取出小球的时候有4种可能。画出来的分支如下图所示：
 
