--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -38,4 +38,18 @@ Our goal is to figure out which of these conjectures is most plausible, given so
 So now let’s plant the garden and see how to use the data to infer what’s in the bag. Let’s begin by considering just the single conjecture, [ ], that the bag contains one blue and three white marbles. On the first draw from the bag, one of four things could happen, corre- sponding to one of four marbles in the bag. So we can visualize the possibilities branching outward:
 -->
 &emsp;&emsp; 我们来画一画这个“花园”，看一下怎么用这些数据来推断袋子里小球的颜色。我们随意选一种推测比如\[:large_blue_circle::white_circle::white_circle::white_circle:\]，袋子里有一个蓝球和三个白球。第一次从袋子取出小球的时候有4种可能。画出来的分支如下图所示：
+<p align="center"> <img src="images/ball_path_1.png"  width="200"/> </p>
 
+<!--
+Now consider the garden as we get another draw from the bag. It expands the garden out one layer:
+-->
+现在选第二个球。“花园”展开的样子如下：
+<!--
+Now there are 16 possible paths through the garden, one for each pair of draws. On the second draw from the bag, each of the paths above again forks into four possible paths. Why?
+-->
+
+现在花园有16条可能的路径，每条路径代表取一个小球。第二次取小球的时候，每条路径又扩展出4条新的路径。为什么？
+<!--
+Because we believe that our shaking of the bag gives each marble a fair chance at being drawn, regardless of which marble was drawn previously. The third layer is built in the same way, and the full garden is shown in Figure 2.2. There are 43 = 64 possible paths in total.
+-->
+因为每次取小球的时候我们都把以前取出的小球放进去并摇了袋子，取出没个小球的概率相同。第三层的构建也一样，整个花园如图2-2。有4的3次方=64条路径。
