--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -44,6 +44,9 @@ So now let’s plant the garden and see how to use the data to infer what’s in
 Now consider the garden as we get another draw from the bag. It expands the garden out one layer:
 -->
 现在选第二个球。“花园”展开的样子如下：
+
+<p align="center"> <img src="images/ball_path_2.png"  width="300"/> </p>
+
 <!--
 Now there are 16 possible paths through the garden, one for each pair of draws. On the second draw from the bag, each of the paths above again forks into four possible paths. Why?
 -->
@@ -53,3 +56,5 @@ Now there are 16 possible paths through the garden, one for each pair of draws. 
 Because we believe that our shaking of the bag gives each marble a fair chance at being drawn, regardless of which marble was drawn previously. The third layer is built in the same way, and the full garden is shown in Figure 2.2. There are 43 = 64 possible paths in total.
 -->
 因为每次取小球的时候我们都把以前取出的小球放进去并摇了袋子，取出没个小球的概率相同。第三层的构建也一样，整个花园如图2-2。有4的3次方=64条路径。
+
+<p align="center"> <img src="images/figure2-2.png"  width="400"/> </p>
