--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -64,3 +64,16 @@ As we consider each draw from the bag, some of these paths are logically elimina
 -->
 
 &emsp;&emsp; 随着每次从袋子里取出小球，有些路径不合逻辑可以去掉。第一次取出的小球是:large_blue_circle:，所以全是白球的路径就可以去掉。真实的数据如果映射到花园路径上，那么它一定是穿过离起始点最近的那个蓝色小球。第二次取小球以后从第一个蓝球衍生出的三条路径保留了下来。我们的数据一定是一个蓝球后的三个白球的路径之一，但是并不知道到底是哪一条路径，因为每次只记录的小球的颜色。最后第三次取出的小球是:large_blue_circle:，每条前面剩下的路径只衍生出一条路径，所以最后有三条路径可以出现我们想要的序列:large_blue_circle::white_circle::large_blue_circle:，这里我们假设袋子里的小球是\[:large_blue_circle::white_circle::white_circle::white_circle:\]。图2-3把一些不可能的路径去掉又重新展示了一下可能的路径，现在我们无法确定到底走的是那条路径。但是因为我们只想知道袋子里有一个蓝球和三个白球的概率，所以可以肯定是其中一条路径。这三条路径就是我们根据已知（袋子里包含4个小球，白色或蓝色）和数据（:large_blue_circle::white_circle::large_blue_circle:）所能得出的结果。
+
+<!--
+This demonstrates that there are three (out of 64) ways for a bag containing [ ] to produce the data . We have no way to decide among these three ways. The infer- ential power comes from comparing this count to the numbers of ways each of the other conjectures of the bag’s contents could produce the same data. For example, consider the conjecture [ ]. There are zero ways for this conjecture to produce the observed data, because even one is logically incompatible with it. The conjecture [ ] is likewise logically incompatible with the data. So we can eliminate these two conjectures, because neither provides even a single path that is consistent with the data.
+-->
+
+&emsp;&emsp;也就是说如果袋子里的小球是\[:large_blue_circle::white_circle::white_circle::white_circle:\]，那么有3(总共64)种方法得到数据:large_blue_circle::white_circle::large_blue_circle:。我们没法确定这三种方法中确切的一种。推断的强大之处在于可以对比袋子里小球每种可能的组合之间可以产生上述数据的可能的的多少。比如\[:white_circle::white_circle::white_circle::white_circle:\]可能的方法就是0。\[:large_blue_circle::large_blue_circle::large_blue_circle::large_blue_circle:\]可能的方法也是0。所以这两种组合我们可以排除了，因为没有一条路径可以产生我们已经观察到的数据。
+
+<!--
+Figure 2.4 displays the full garden now, for the remaining three conjectures: [ ], [ ], and [ ]. The upper-left wedge displays the same garden as Figure 2.3. The upper-right shows the analogous garden for the conjecture that the bag contains three blue marbles and one white marble. And the bottom wedge shows the garden for two blue and two white marbles. Now we count up all of the ways each conjecture could produce the observed data. For one blue and three white, there are three ways, as we counted already. For two blue and two white, there are eight paths forking through the garden that are logically consistent with the observed sequence. For three blue and one white, there are nine paths that survive.
+-->
+
+&emsp;&emsp;图2-4展示了完整的花园，包括\[:large_blue_circle::white_circle::white_circle::white_circle:\]，\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]和\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]。图的左上角与图2-3相同。右上角展示的是当袋子里有三个蓝球和一个白球的样子。图的下半部分展示的是两个白球和两个蓝球时的样子。我们数一下每种组合产生观测数据的方法数。一个蓝球和三个白球的时候有三条路径。两个蓝球和两个白球的时候有八条路径产生我们的观测数据。三个蓝球和一个白球的时候有九条路径。
+
