--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -57,13 +57,16 @@ Because we believe that our shaking of the bag gives each marble a fair chance a
 -->
 因为每次取小球的时候我们都把以前取出的小球放进去并摇了袋子，取出没个小球的概率相同。第三层的构建也一样，整个花园如图2-2。有4的3次方=64条路径。
 
-<p align="center"> <img src="images/figure2-2.png"  width="400"/> </p>
+<p align="center"> <img src="images/figure2-2.png"  width="500"/> </p>
 <p align="center">图2-2 当袋子里有一个蓝球和三个白球时的64种可能</p>
 <!--
 As we consider each draw from the bag, some of these paths are logically eliminated. The first draw tuned out to be , recall, so the three white paths at the bottom of the garden are eliminated right away. If you imagine the real data tracing out a path through the garden, it must have passed through the one blue path near the origin. The second draw from the bag produces , so three of the paths forking out of the first blue marble remain. As the data trace out a path, we know it must have passed through one of those three white paths (after the first blue path), but we don’t know which one, because we recorded only the color of each marble. Finally, the third draw is . Each of the remaining three paths in the middle layer sustain one blue path, leaving a total of three ways for the sequence to appear, assuming the bag contains [ ]. Figure 2.3 shows the garden again, now with logically eliminated paths grayed out. We can’t be sure which of those three paths the actual data took. But as long as we’re considering only the possibility that the bag contains one blue and three white marbles, we can be sure that the data took one of those three paths. Those are the only paths consistent with both our knowledge of the bag’s contents (four marbles, white or blue) and the data ( ).
 -->
 
 &emsp;&emsp; 随着每次从袋子里取出小球，有些路径不合逻辑可以去掉。第一次取出的小球是:large_blue_circle:，所以全是白球的路径就可以去掉。真实的数据如果映射到花园路径上，那么它一定是穿过离起始点最近的那个蓝色小球。第二次取小球以后从第一个蓝球衍生出的三条路径保留了下来。我们的数据一定是一个蓝球后的三个白球的路径之一，但是并不知道到底是哪一条路径，因为每次只记录的小球的颜色。最后第三次取出的小球是:large_blue_circle:，每条前面剩下的路径只衍生出一条路径，所以最后有三条路径可以出现我们想要的序列:large_blue_circle::white_circle::large_blue_circle:，这里我们假设袋子里的小球是\[:large_blue_circle::white_circle::white_circle::white_circle:\]。图2-3把一些不可能的路径去掉又重新展示了一下可能的路径，现在我们无法确定到底走的是那条路径。但是因为我们只想知道袋子里有一个蓝球和三个白球的概率，所以可以肯定是其中一条路径。这三条路径就是我们根据已知（袋子里包含4个小球，白色或蓝色）和数据（:large_blue_circle::white_circle::large_blue_circle:）所能得出的结果。
+
+<p align="center"> <img src="images/figure2-3.png"  width="500"/> </p>
+<p align="center">图2-3 把与数据冲突的路径取掉，只剩下3条可能的路径</p>
 
 <!--
 This demonstrates that there are three (out of 64) ways for a bag containing [ ] to produce the data . We have no way to decide among these three ways. The infer- ential power comes from comparing this count to the numbers of ways each of the other conjectures of the bag’s contents could produce the same data. For example, consider the conjecture [ ]. There are zero ways for this conjecture to produce the observed data, because even one is logically incompatible with it. The conjecture [ ] is likewise logically incompatible with the data. So we can eliminate these two conjectures, because neither provides even a single path that is consistent with the data.
@@ -77,3 +80,19 @@ Figure 2.4 displays the full garden now, for the remaining three conjectures: [ 
 
 &emsp;&emsp;图2-4展示了完整的花园，包括\[:large_blue_circle::white_circle::white_circle::white_circle:\]，\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]和\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]。图的左上角与图2-3相同。右上角展示的是当袋子里有三个蓝球和一个白球的样子。图的下半部分展示的是两个白球和两个蓝球时的样子。我们数一下每种组合产生观测数据的方法数。一个蓝球和三个白球的时候有三条路径。两个蓝球和两个白球的时候有八条路径产生我们的观测数据。三个蓝球和一个白球的时候有九条路径。
 
+<p align="center"> <img src="images/figure2-4.png"  width="500"/> </p>
+<p align="center">图2-4 所有可能的组合可以产生已知数据的路径情况</p>
+
+<!--
+To summarize, we’ve considered five different conjectures about the contents of the bag, ranging from zero blue marbles to four blue marbles. For each of these conjectures, we’ve counted up how many sequences, paths through the garden of forking data, could potentially produce the observed data, :
+-->
+
+总结一下，我们把零个蓝球到四个蓝球的所有的组合情况都列出来。表中列出来所有可以产生观测数据的路径个数：
+
+|   组合       |产生已知数据的路径数|
+|-------------|-----------------|
+|\[:white_circle::white_circle::white_circle::white_circle:\]|0 x 4 x 0 = 0|
+|\[:large_blue_circle::white_circle::white_circle::white_circle:\]|1 x 3 x 1 = 3|
+|\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]|2 x 2 x 2 = 8|
+|\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]|3 x 1 x 3 = 9|
+|\[:large_blue_circle::large_blue_circle::large_blue_circle::large_blue_circle:\]|4 x 0 x 4 = 0|
