--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -96,3 +96,21 @@ To summarize, we’ve considered five different conjectures about the contents o
 |\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]|2 x 2 x 2 = 8|
 |\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]|3 x 1 x 3 = 9|
 |\[:large_blue_circle::large_blue_circle::large_blue_circle::large_blue_circle:\]|4 x 0 x 4 = 0|
+
+
+<!--
+Notice that the number of ways to produce the data, for each conjecture, can be computed by first counting the number of paths in each “ring” of the garden and then by multiplying these counts together. This is just a computational device. It tells us the same thing as Fig- ure 2.4, but without having to draw the garden. The fact that numbers are multiplied during calculation doesn’t change the fact that this is still just counting of logically possible paths. This point will come up again, when you meet the more formal representation of Bayesian inference.
+-->
+&emsp;&emsp;注意,每种组合产生观测数据的路径数量的就是数一下花园每个环上的路径数量，然后乘到一起就可以了。这就是个计算工具。结果跟图2-4一样，但却不用把整个花园都画出来。即使是乘法也改变不了我们只是数了数可能的路径的事实。后面讲贝叶斯推断更正式的表达时也是这样的。
+
+<!--
+So what good are these counts? By comparing these counts, we have part of a solution for a way to rate the relative plausibility of each conjectured bag composition. But it’s only a part of a solution, because in order to compare these counts we first have to decide how many ways each conjecture could itself be realized. We might argue that when we have no reason to assume otherwise, we can just consider each conjecture equally plausible and compare the counts directly. But often we do have reason to assume otherwise.
+-->
+
+&emsp;&emsp;这样的技术计算有什么好处呢？比较这些计数，起码我们有方法比较多种组合之间的可能性。但是这只能叫做一部分方法，因为必须得知道每种组合出现的概率大小。大家可能会说每种组合概率都相同直接比较数量就可以了。但是实际情况通常不是这样的。
+
+<!--
+Rethinking: Justification. Using these counts of paths through the garden as measures of relative plausibility can be justified in several ways. The justification here is logical: If we wish to reason about plausibility and remain consistent with ordinary logic—statements about true and false—then we should obey this procedure.39 There are several other justifications that lead to the same mathe- matical procedure. Regardless of how you choose to philosophically justify it, notice that it actually works. Justifications and philosophy motivate procedures, but it is the results that matter. The many successful real world applications of Bayesian inference may be all the justification you need. Twen- tieth century opponents of Bayesian data analysis argued that Bayesian inference was easy to justify, buthardtoapply.40 Thatisluckilynolongertrue.JustbecarefulnottoassumethatbecauseBayesian inference is justified that no other approach can also be justified. Golems come in many types, and some of all types are useful.
+-->
+
+>思考：证明。用类似这种花园路径的方式来度量可能性，有若干种证明方法。这里我们逻辑上证明一下：如果我们想要归因可能性并保留原来的逻辑，真假陈述，我们就能得到这个过程。还有好几种证明方法可以得到同样的数学过程。不管你怎么证明，总之它很有效。可能大家需要看到的证明方式是贝叶斯推断在真实世界中的成功应用。20世纪贝叶斯分析的反对者认为贝叶斯推断证明容易但是很难有实际应用。但是很幸运这不再是真的了，没有其他方法也可以证明它很有用，石人有很多种，有一些非常有用。
