--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -114,3 +114,32 @@ Rethinking: Justification. Using these counts of paths through the garden as mea
 -->
 
 >思考：证明。用类似这种花园路径的方式来度量可能性，有若干种证明方法。这里我们逻辑上证明一下：如果我们想要归因可能性并保留原来的逻辑，真假陈述，我们就能得到这个过程。还有好几种证明方法可以得到同样的数学过程。不管你怎么证明，总之它很有效。可能大家需要看到的证明方式是贝叶斯推断在真实世界中的成功应用。20世纪贝叶斯分析的反对者认为贝叶斯推断证明容易但是很难有实际应用。但是很幸运这不再是真的了，没有其他方法也可以证明它很有用，石人有很多种，有一些非常有用。
+
+
+<!--
+2.1.2. Using prior information. We may have prior information about the relative plausi- bility of each conjecture. This prior information could arise from knowledge of how the contents of the bag were generated. It could also arise from previous data. Or we might want to act as if we had prior information, so we can build conservatism into the analysis. Whatever the source, it would help to have a way to use prior information. Luckily there is a natural solution: Just multiply the prior count by the new count.
+-->
+
+**2.1.2 先验知识的应用**。我们可能掌握一些小球组合情况的先验信息。这个先验知识可能是关于小球组合是怎么生成的，也可能是从已知数据中推到出来的。为了展现我们对先验的认识，在分析的时候可以建立一些保留信息。不管来源怎样，总有一种方法把这些先验信息用起来。其实有个方法很简单，只要把先验和前面的数量相乘就可以了。
+<!--
+To grasp this solution, suppose we’re willing to say each conjecture is equally plausible at the start. So we just compare the counts of ways in which each conjecture is compatible with the observed data. This comparison suggests that [ ] is slightly more plausible than [ ], and both are about three times more plausible than [ ].
+-->
+&emsp;&emsp;为了展现算法，我们假设每种组合出现的概率相等。所以只需比较彼此出现观测数据的可能性就可以了。通过比较我们发现\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]的可能性比\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]稍大，大约都是\[:large_blue_circle::white_circle::white_circle::white_circle:\]的三倍。
+
+<!--
+Now suppose we draw another marble from the bag to get another observation: . Now you have two choices. You could start all over again, making a garden with four layers to trace out the paths compatible with the data sequence . Or you could take the previous counts over conjectures (0, 3, 8, 9, 0) and just update them in light of the new observation. It turns out that these two methods are mathematically identical, as long as the new observation is logically independent of the previous observations.
+-->
+
+&emsp;&emsp;假设我们有又取了一次小球，有增加了一个观测数据：:large_blue_circle:。现在有两个选择：从头再来一遍，把花园图再画一遍。或者可以直接在(0, 3, 8, 9, 0)基础上继续。两种方法数学上是一样的，因为新的观测数据独立于前面的观测。
+<!--
+Here’s how to do it. First we count the numbers of ways each conjecture could produce the new observation, . Then we multiply each of these new counts by the previous numbers of ways for each conjecture. In table form:
+-->
+&emsp;&emsp;怎么做呢？首先数一下每种组合产生新观测数据的方法数。然后与之前的数量相乘。如下表：
+
+|   组合       |取出蓝球的路径数|前述的路径数|新的路径数|
+|-------------|-----------------|----------|--------------|
+|\[:white_circle::white_circle::white_circle::white_circle:\]|0|0|0 x 0 = 0|
+|\[:large_blue_circle::white_circle::white_circle::white_circle:\]|1|3|1 x 3  = 3|
+|\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]|2|8|2 x 8 = 16|
+|\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]|3|9|3 x 9 = 27|
+|\[:large_blue_circle::large_blue_circle::large_blue_circle::large_blue_circle:\]|4|0| 0 x 4 = 0|
