--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -143,3 +143,15 @@ Here’s how to do it. First we count the numbers of ways each conjecture could 
 |\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]|2|8|2 x 8 = 16|
 |\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]|3|9|3 x 9 = 27|
 |\[:large_blue_circle::large_blue_circle::large_blue_circle::large_blue_circle:\]|4|0| 0 x 4 = 0|
+
+<!--
+The new counts in the right-hand column above summarize all the evidence for each conjec- ture. As new data arrive, and provided those data are independent of previous observations, then the number of logically possible ways for a conjecture to produce all the data up to that point can be computed just by multiplying the new count by the old count.
+-->
+
+&emsp;&emsp;最右面的一列是最终的数量。随着加入新的独立于之前观测的数据，计算新的结果只需要把每种组合产生新数据的可能数与之前的结果相乘。
+
+<!--
+This updating approach amounts to nothing more than asserting that (1) when we have previous information suggesting there are Wprior ways for a conjecture to produce a previous observation Dprior and (2) we acquire new observations Dnew that the same conjecture can produce in Wnew ways, then (3) the number of ways the conjecture can account for both Dprior as well as Dnew is just the product Wprior × Wnew. For example, in the table above the conjecture [ ] has Wprior = 8 ways to produce Dprior = . It also has Wnew = 2 ways to produce the new observation Dnew = . So there are 8 × 2 = 16 ways for the conjecture to produce both Dprior and Dnew. Why multiply? Multiplication is just a shortcut to enumerating and counting up all of the paths through the garden that could produce all the observations.
+-->
+&emsp;&emsp;这种更新策略只需保证：（1）已知数据产生观测数据D<sub>prior</sub> 有W<sub>prior</sub>条路径，（2）从同样的组合产生新的观测数据 D<sub>new</sub>的路径有W<sub>new</sub>条，（3）那么从组合中产生数据D<sub>prior</sub> 和 D<sub>new</sub> 就是 W<sub>prior</sub> × W<sub>new</sub>。 例如上表中对于组合\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]，对于数据D<sub>prior</sub>，W<sub>prior</sub> = 8。对于D<sub>new</sub>=:large_blue_circle:，W<sub>new</sub> = 2。所以就有  8 × 2 = 16条路径产生D<sub>prior</sub>和D<sub>new</sub>。至于为什么是乘法，因为乘是花园路径数排列的简单计算方法。
+
