--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -155,3 +155,27 @@ This updating approach amounts to nothing more than asserting that (1) when we h
 -->
 &emsp;&emsp;这种更新策略只需保证：（1）已知数据产生观测数据D<sub>prior</sub> 有W<sub>prior</sub>条路径，（2）从同样的组合产生新的观测数据 D<sub>new</sub>的路径有W<sub>new</sub>条，（3）那么从组合中产生数据D<sub>prior</sub> 和 D<sub>new</sub> 就是 W<sub>prior</sub> × W<sub>new</sub>。 例如上表中对于组合\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]，对于数据D<sub>prior</sub>，W<sub>prior</sub> = 8。对于D<sub>new</sub>=:large_blue_circle:，W<sub>new</sub> = 2。所以就有  8 × 2 = 16条路径产生D<sub>prior</sub>和D<sub>new</sub>。至于为什么是乘法，因为乘是花园路径数排列的简单计算方法。
 
+
+<!--
+In this example, the prior data and new data are of the same type: marbles drawn from the bag. But in general, the prior data and new data can be of different types. Suppose for example that someone from the marble factory tells you that blue marbles are rare. So for every bag containing [ ], they made two bags containing [ ] and three bags containing [ ]. They also ensured that every bag contained at least one blue and one white marble. We can update our counts again:
+-->
+&emsp;&emsp;上面的例子里，先验数据和新数据类型是一样的：都是从袋子里取小球。但是通常情况下，先验数据和新数据可能是不同类型的。比如小球工厂的工人告诉你，蓝球很少。比如每生产一组\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]，就生产两组\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]，然后生产三组\[:large_blue_circle::white_circle::white_circle::white_circle:\]。而且他们还确定每个袋子里至少有一个蓝球和一个白球。这时我们的计数就可以这样更新：
+
+|   组合       |前述路径数|工厂数据|新的路径数|
+|-------------|-----------------|----------|--------------|
+|\[:white_circle::white_circle::white_circle::white_circle:\]|0|0|0 x 0 = 0|
+|\[:large_blue_circle::white_circle::white_circle::white_circle:\]|3|3|3 x 3  = 3|
+|\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]|16|2|16 x 2 = 32|
+|\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]|27|1|27 x 1 = 27|
+|\[:large_blue_circle::large_blue_circle::large_blue_circle::large_blue_circle:\]|0|0| 0 x 0 = 0|
+
+<!--
+Now the conjecture [
+threshold difference in these counts at which we can safely decide that one of the conjectures is the correct one? You’ll spend the next chapter exploring that question.
+-->
+
+&emsp;&emsp;现在\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]的可能性最大，但是只比\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]多一点点。那么有没有一个阈值，当超过这个阈值，我们就可以肯定的说是这个组合而不是另一个。后面的章节我们会学习到。
+<!--
+Rethinking: Original ignorance. Which assumption should we use, when there is no previous infor- mation about the conjectures? The most common solution is to assign an equal number of ways that each conjecture could be correct, before seeing any data. This is sometimes known as the principle of indifference: When there is no reason to say that one conjecture is more plausible than another, weigh all of the conjectures equally. The issue of choosing a representation of “ignorance” is surpris- ingly complicated. The issue will arise again in later chapters. For the sort of problems we examine in this book, the principle of indifference results in inferences very comparable to mainstream non- Bayesian approaches, most of which contain implicit equal weighting of possibilities. For example a typical non-Bayesian confidence interval weighs equally all of the possible values a parameter could take, regardless of how implausible some of them are. Many non-Bayesian procedures have moved away from this, through the use of penalized likelihood and other methods. We’ll discuss these in Chapter 6.
+-->
+>思考：刚开始忽略的。当没有任何先验的时候哪些假设我们可以用？通常的做法是在看到任何数据之前每种组合分配一个相等的概率。这有时候就作为一个不成文的规则：当没有充分的理由说某个组合比其他组合的可能性大，那么就假设所有的组合的可能性相同。选择忽略什么是个非常复杂的问题。后面的章节这个问题还会更复杂。本书研究的问题中大多数都假设有等权重的概率，与非贝叶斯推断基本类似。比如典型的非贝叶斯置信区间就等权重的衡量了所有可能的参数，。很多非贝叶斯通过惩罚似然脱离了这一点。第六章会讨论到。
