--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -179,3 +179,19 @@ threshold difference in these counts at which we can safely decide that one of t
 Rethinking: Original ignorance. Which assumption should we use, when there is no previous infor- mation about the conjectures? The most common solution is to assign an equal number of ways that each conjecture could be correct, before seeing any data. This is sometimes known as the principle of indifference: When there is no reason to say that one conjecture is more plausible than another, weigh all of the conjectures equally. The issue of choosing a representation of “ignorance” is surpris- ingly complicated. The issue will arise again in later chapters. For the sort of problems we examine in this book, the principle of indifference results in inferences very comparable to mainstream non- Bayesian approaches, most of which contain implicit equal weighting of possibilities. For example a typical non-Bayesian confidence interval weighs equally all of the possible values a parameter could take, regardless of how implausible some of them are. Many non-Bayesian procedures have moved away from this, through the use of penalized likelihood and other methods. We’ll discuss these in Chapter 6.
 -->
 >思考：刚开始忽略的。当没有任何先验的时候哪些假设我们可以用？通常的做法是在看到任何数据之前每种组合分配一个相等的概率。这有时候就作为一个不成文的规则：当没有充分的理由说某个组合比其他组合的可能性大，那么就假设所有的组合的可能性相同。选择忽略什么是个非常复杂的问题。后面的章节这个问题还会更复杂。本书研究的问题中大多数都假设有等权重的概率，与非贝叶斯推断基本类似。比如典型的非贝叶斯置信区间就等权重的衡量了所有可能的参数，。很多非贝叶斯通过惩罚似然脱离了这一点。第六章会讨论到。
+
+<!--
+2.1.3. From counts to probability. It is helpful to think of this strategy as adhering to a principle of honest ignorance: When we don’t know what caused the data, potential causes that may produce the data in more ways are more plausible. This leads us to count paths through the garden of forking data.
+-->
+**2.1.3 从数量到概率**。反正搞不清楚状况的时候就坚持一个原则准没错：当我们不知道产生某个数据的确切原因的时候，潜在的能够以更多种方式产生的这个数据的因素的可能性更大。所以我们数花园路径的数量。
+
+<!--
+It’s hard to use these counts though, so we almost always standardize them in a way that transforms them into probabilities. Why is it hard to work with the counts? First, since relative value is all that matters, the size of the counts 3, 8, and 9 contain no information of value. They could just as easily be 30, 80, and 90. The meaning would be the same. It’s just the relative values that matter. Second, as the amount of data grows, the counts will very quickly grow very large and become difficult to manipulate. By the time we have 10 data points, there are already more than one million possible sequences. We’ll want to analyze data sets with thousands of observations, so explicitly counting these things isn’t practical.
+-->
+&emsp;&emsp;直接的数量用起来很不方便，所以通常都标准化成概率值。为什么？首先我们只需要关注数量的相对大小，所以数量是3、8、9还是30、80、90，含义是相同的。真正有意义的是它们之间的大小。其次，随着数据的增长数量增涨的非常快，上面小球的例子中如果有10个数据点，路径数就已经超过百万了，实际应用中随随便便就有几千条数据，所以计数在实际应用中没法处理。
+
+<!--
+Luckily, there’s a mathematical way to compress all of this. Specifically, we define the updated plausibility of each possible composition of the bag, after seeing the data, as:
+-->
+&emsp;&emsp;幸运的是，有一些数学方法可以简化。当得到一个新的数据的时候我们可以这样更新每种组合的概率值：
+
