--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -195,3 +195,9 @@ Luckily, there’s a mathematical way to compress all of this. Specifically, we 
 -->
 &emsp;&emsp;幸运的是，有一些数学方法可以简化。当得到一个新的数据的时候我们可以这样更新每种组合的概率值：
 
+<p align='center'>看到数据(:large_blue_circle::white_circle::large_blue_circle:)推测出组合[:large_blue_circle::white_circle::white_circle::white_circle:]的可能性</p>
+<p align='center'>∝</p>
+<p align='center'>[:large_blue_circle::white_circle::white_circle::white_circle:]能够产生(:large_blue_circle::white_circle::large_blue_circle:)的路径数</p>
+<p align='center'>x</p>
+<p align='center'>[:large_blue_circle::white_circle::white_circle::white_circle:]的先验概率</p>
+
