--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -201,3 +201,64 @@ Luckily, there’s a mathematical way to compress all of this. Specifically, we 
 <p align='center'>x</p>
 <p align='center'>[:large_blue_circle::white_circle::white_circle::white_circle:]的先验概率</p>
 
+
+<!--
+That little ∝ means proportional to. We want to compare the plausibility of each possible bag composition. So it’ll be helpful to define p as the proportion of marbles that are blue. For [
+],p = 1/4 = 0.25. AlsoletDnew = . Andnowwecanwrite:
+-->
+∝ 的意思是正比于。目标是比较每种组合的可能性。我们定义p为每种组合中蓝色小球的比例。对于组合\[:large_blue_circle::white_circle::white_circle::white_circle:\]，p=1/4=0.25。同样设D<sub>new</sub>=（[:large_blue_circle::white_circle::large_blue_circle:]），那么就有：
+
+
+<!--
+The above just means that for any value p can take, we judge the plausibility of that value p as proportional to the number of ways it can get through the garden of forking data. This expression just summarizes the calculations you did in the tables of the previous section.
+-->
+
+上面的公式表示p取每个值的概率正比于花园中路径的数量，只是对前一节中的计算表格做了一个更加形式化的表示。
+
+<!--
+Finally, we construct probabilities by standardizing the plausibility so that the sum of the plausibilities for all possible conjectures will be one. All you need to do in order to stan- dardize is to add up all of the products, one for each value p can take, and then divide each product by the sum of products:
+-->
+最后想得到每种组合的概率值，只需要把p的每个取值的数量除以路径的总数就可以标准化成概率值。
+<!--
+A worked example is needed for this to really make sense. So consider again the table from before, now updated using our definitions of p and “plausibility”:
+-->
+
+为了加深印象举例如下。用p和概率替换原来的表格即可：
+
+<!--
+You can quickly compute these plausibilities in R:
+-->
+用R计算很简单
+
+<!--
+The values in ways are the products mentioned before. And sum(ways) is the denominator “sum of products” in the expression near the top of the page.
+-->
+路径数是前面提到的乘积。sum(ways) 是前面公式中的分母部分。
+
+<!--
+These plausibilities are also probabilities—they are non-negative (zero or positive) real numbers that sum to one. And all of the mathematical things you can do with probabilities you can also do with these values. Specifically, each piece of the calculation has a direct partner in applied probability theory. These partners have stereotyped names, so it’s worth learning them, as you’ll see them again and again.
+-->
+
+这些可能性也是概率，和为1的非负（0或正数）实数。所有概率相关的计算都可以应用。而且公式的每一部分在传统概率论中都有对应的正式名称。因为需要反复的用到，我们来简单过一下：
+<!--
+A conjectured proportion of blue marbles, p, is usually called a parameter value. It’s just a way of indexing possible explanations of the data.
+The relative number of ways that a value p can produce the data is usually called a likelihood. It is derived by enumerating all the possible data sequences that could have happened and then eliminating those sequences inconsistent with the data.
+The prior plausibility of any specific p is usually called the prior probability.
+The new, updated plausibility of any specific p is usually called the posterior
+probability.
+-->
+
+- 蓝色小球的比例p，通常叫做参数。它只是数据的可能解释的一个标记。
+- p产生数据的相对路径数量通常叫做似然。它是枚举所有可能产生观测数据的路径并把一些不可能的情况取掉。
+- p的已知情况通常叫做先验概率。
+- 每个p的概率更新后的概率叫做后验概率
+
+<!--
+In the next major section, you’ll meet the more formal notation for these objects and see how they compose a simple statistical model.
+-->
+下一节我们用更加形式化的表达式来看一下这些概念并建立一个简单的统计模型。
+<!--
+Rethinking: Randomization. When you shuffle a deck of cards or assign subjects to treatments by flipping a coin, it is common to say that the resulting deck and treatment assignments are randomized. What does it mean to randomize something? It just means that we have processed the thing so that we know almost nothing about its arrangement. Shuffling a deck of cards changes our state of knowledge, so that we no longer have any specific information about the ordering of cards. However, the bonus that arises from this is that, if we really have shuffled enough to erase any prior knowledge of the ordering, then the order the cards end up in is very likely to be one of the many orderings with high information entropy. The concept of information entropy will be increasingly important as we progress, and will be unpacked in Chapters 6 and 9.
+-->
+>思考：随机。当我们洗牌或者通过抛硬币来分配受试者的时候，我们常说牌或者实验分配是随机的。把一个事物随机化意味着什么？意味着我们处理数据的时候对于安排一无所知。通过洗牌我们就不知道牌的顺序。好处是通过洗牌抹去任何关于顺序的先验知识会使牌的顺序非常接近那些高信息熵的顺序组合。信息熵这个概念在后面会越来越重要，第6章和第9章会详细介绍。
+
