--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -209,6 +209,9 @@ That little ∝ means proportional to. We want to compare the plausibility of ea
 ∝ 的意思是正比于。目标是比较每种组合的可能性。我们定义p为每种组合中蓝色小球的比例。对于组合\[:large_blue_circle::white_circle::white_circle::white_circle:\]，p=1/4=0.25。同样设D<sub>new</sub>=（[:large_blue_circle::white_circle::large_blue_circle:]），那么就有：
 
 
+<p align="center"> <img src="images/eq1.png"  width="500"/> </p>
+
+
 <!--
 The above just means that for any value p can take, we judge the plausibility of that value p as proportional to the number of ways it can get through the garden of forking data. This expression just summarizes the calculations you did in the tables of the previous section.
 -->
