--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -233,10 +233,19 @@ You can quickly compute these plausibilities in R:
 -->
 用R计算很简单
 
+```
+ways <- c( 0 , 3 , 8 , 9 , 0 )
+ways/sum(ways)
+```
+```console
+[1] 0.00 0.15 0.40 0.45 0.00
+```
+
 <!--
 The values in ways are the products mentioned before. And sum(ways) is the denominator “sum of products” in the expression near the top of the page.
 -->
-路径数是前面提到的乘积。sum(ways) 是前面公式中的分母部分。
+
+ways是前面提到的乘积。sum(ways) 是前面公式中的分母部分。
 
 <!--
 These plausibilities are also probabilities—they are non-negative (zero or positive) real numbers that sum to one. And all of the mathematical things you can do with probabilities you can also do with these values. Specifically, each piece of the calculation has a direct partner in applied probability theory. These partners have stereotyped names, so it’s worth learning them, as you’ll see them again and again.
