--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -226,7 +226,17 @@ Finally, we construct probabilities by standardizing the plausibility so that th
 A worked example is needed for this to really make sense. So consider again the table from before, now updated using our definitions of p and “plausibility”:
 -->
 
-为了加深印象举例如下。用p和概率替换原来的表格即可：
+为了加深印象举例如下。用p和概率值替换原来的表格即可：
+
+|   组合       |p|路径数|概率|
+|-------------|-----------------|----------|--------------|
+|\[:white_circle::white_circle::white_circle::white_circle:\]|0|0| 0|
+|\[:large_blue_circle::white_circle::white_circle::white_circle:\]|0.25|3|0.15|
+|\[:large_blue_circle::large_blue_circle::white_circle::white_circle:\]|0.5|8|0.40|
+|\[:large_blue_circle::large_blue_circle::large_blue_circle::white_circle:\]|0.75|9|0.45|
+|\[:large_blue_circle::large_blue_circle::large_blue_circle::large_blue_circle:\]|1|0|0|
+
+
 
 <!--
 You can quickly compute these plausibilities in R:
