--- a/ch2/2.1小径分岔的花园.md
+++ b/ch2/2.1小径分岔的花园.md
@@ -222,6 +222,10 @@ The above just means that for any value p can take, we judge the plausibility of
 Finally, we construct probabilities by standardizing the plausibility so that the sum of the plausibilities for all possible conjectures will be one. All you need to do in order to stan- dardize is to add up all of the products, one for each value p can take, and then divide each product by the sum of products:
 -->
 最后想得到每种组合的概率值，只需要把p的每个取值的数量除以路径的总数就可以标准化成概率值。
+
+<p align="center"> <img src="images/eq2.png"  width="500"/> </p>
+
+
 <!--
 A worked example is needed for this to really make sense. So consider again the table from before, now updated using our definitions of p and “plausibility”:
 -->
